--- a/myntra/package.json
+++ b/myntra/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.1.4",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@techstark/opencv-js": "^4.9.0-release.2",
@@ -23,6 +24,7 @@
     "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.4.4",
     "framer-motion": "^11.0.3",
+    "keen-slider": "^6.8.6",
     "mdb-react-ui-kit": "^7.2.0",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
