--- a/myntra/package.json
+++ b/myntra/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -15,8 +15,9 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5",
+    "@mui/material": "^5.16.0",
     "@techstark/opencv-js": "^4.9.0-release.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
